Minor adjustments for the gold environment.

--- a/Examples/entrainment_rate_D1.ipynb
+++ b/Examples/entrainment_rate_D1.ipynb
@@ -15,11 +15,9 @@
    },
    "outputs": [],
    "source": [
-    "from ppm import *\n",
-    "import utils\n",
+    "from ppmpy.ppm import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import astronomy as ast\n",
     "%matplotlib nbagg\n",
     "\n",
     "case = 'D1'\n",
