--- a/Examples/vr_evolution.ipynb
+++ b/Examples/vr_evolution.ipynb
@@ -17,8 +17,8 @@
    },
    "outputs": [],
    "source": [
-    "import utils\n",
-    "from ppm import *\n",
+    "import nugridpy.utils as utils\n",
+    "from ppmppy.ppm import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib nbagg\n",
