--- a/Examples/entrainment_rate_D2.ipynb
+++ b/Examples/entrainment_rate_D2.ipynb
@@ -15,10 +15,9 @@
    },
    "outputs": [],
    "source": [
-    "from ppm import *\n",
+    "from ppmpy.ppm import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import astronomy as ast\n",
     "%matplotlib nbagg\n",
     "\n",
     "case = 'D2'\n",
