--- a/Examples/vr_evolution.ipynb
+++ b/Examples/vr_evolution.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "import nugridpy.utils as utils\n",
-    "from ppmppy.ppm import *\n",
+    "from ppmpy.ppm import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib nbagg\n",
