--- a/Examples/Ekr_Ekt_renderings.ipynb
+++ b/Examples/Ekr_Ekt_renderings.ipynb
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "import time\n",
     "import moments\n",
-    "import pyppm.ppm as ppm"
+    "import ppmpy.ppm as ppm"
    ]
   },
   {
@@ -64,7 +64,7 @@
     "    return Ekr, Ekt\n",
     "\n",
     "def show_plots(data, vlim, ifig0):\n",
-    "    res_screen = 768\n",
+    "    res = 768\n",
     "    norm = colors.LogNorm(vmin=vlim[0], vmax=vlim[1], clip=True)\n",
     "    interpolation = 'spline16'\n",
     "    cmap = 'viridis'\n",
@@ -76,7 +76,6 @@
     "    img = np.transpose(img)\n",
     "    plt.imshow(img, norm=norm, interpolation=interpolation, cmap=cmap)\n",
     "    plt.axis('off')\n",
-    "    plt.savefig('Ekr-slice_3-{:04d}.png'.format(data['dump']), dpi=res)\n",
     "\n",
     "    ifig = ifig0 + 1; plt.close(ifig); plt.figure(ifig, figsize=(1., 1.), dpi=res)\n",
     "    plt.gca().set_position([0., 0., 1., 1.])\n",
@@ -85,7 +84,6 @@
     "    img = np.transpose(img)\n",
     "    plt.imshow(img, norm=norm, interpolation=interpolation, cmap=cmap)\n",
     "    plt.axis('off')\n",
-    "    plt.savefig('Ekt-slice_3-{:04d}.png'.format(data['dump']), dpi=res)"
    ]
   },
   {
@@ -124,7 +122,7 @@
    },
    "outputs": [],
    "source": [
-    "show_plots(data[0], (2e10, 5e13), 1)"
+    "show_plots(data[0], (3e10, 5e13), 1)"
    ]
   },
   {
