--- a/Examples/Ekr_Ekt_renderings.ipynb
+++ b/Examples/Ekr_Ekt_renderings.ipynb
@@ -83,7 +83,7 @@
     "    img = np.sum((1e43/1e27)*data['Ekt'][:, ::-1, idx], axis=2)/len(idx)\n",
     "    img = np.transpose(img)\n",
     "    plt.imshow(img, norm=norm, interpolation=interpolation, cmap=cmap)\n",
-    "    plt.axis('off')\n",
+    "    plt.axis('off')\n"
    ]
   },
   {
