--- a/Examples/Ekr_Ekt_renderings.ipynb
+++ b/Examples/Ekr_Ekt_renderings.ipynb
@@ -48,7 +48,7 @@
     "    r1D = yp.get('Y', fname=dump-1, resolution='l')\n",
     "    #Rho1D = yp.get('Rho', fname=dump-1, resolution='l')\n",
     "    #Rho = moms.fromradprof(r1D, Rho1D)\n",
-    "    Rho = moms.get("Rho", dump)\n",
+    "    Rho = moms.get(\"Rho\", dump)\n",
     "    \n",
     "    rad = moments.array([moms.get(\"coord1(Rho)\", dump), \\\n",
     "                         moms.get(\"coord2(Rho)\", dump), \\\n",
