Updated data paths.

--- a/Examples/Ekr_Ekt_renderings.ipynb
+++ b/Examples/Ekr_Ekt_renderings.ipynb
@@ -32,8 +32,8 @@
    },
    "outputs": [],
    "source": [
-    "yp = ppm.yprofile(\"/data1/PPM/YProfiles/O-shell-M25/D2/\")\n",
-    "moms = moments.Moments(\"/data1/O-shell-M25/Moms\", use_e3d=True)"
+    "yp = ppm.yprofile(\"/ppm_data1/rpod2/YProfiles/O-shell-M25/D2/\")\n",
+    "moms = moments.Moments(\"/ppm_data1/D2/Moms\", use_e3d=True)"
    ]
   },
   {
