--- a/Examples/Moments_explore.ipynb
+++ b/Examples/Moments_explore.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "data_dir = \"/data1/O-shell-M25/\"\n",
+    "data_dir = \"/ppm_data1/D2/\"\n",
     "data_type = \"Moms\"\n",
     "\n",
     "data = moments.Moments(data_dir+data_type)\n",
