--- a/Examples/YProfile_explore.ipynb
+++ b/Examples/YProfile_explore.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "%pylab nbagg\n",
     "from ppmpy import ppm\n",
-    "data_dir='/data1/PPM/YProfiles/'"
+    "data_dir='/ppm_data1/YProfiles/'"
    ]
   },
   {
@@ -41,7 +41,7 @@
    ],
    "source": [
     "# Tese are the projects for which data is available\n",
-    "!ls /data1/PPM/YProfiles/"
+    "!ls /ppm_data1/YProfiles/"
    ]
   },
   {
