Corrected some paths.

--- a/Examples/YProfile_explore.ipynb
+++ b/Examples/YProfile_explore.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "%pylab nbagg\n",
     "from ppmpy import ppm\n",
-    "data_dir='/ppm_data1/YProfiles/'"
+    "data_dir='/ppm_data1/rpod2/YProfiles/'"
    ]
   },
   {
@@ -41,7 +41,7 @@
    ],
    "source": [
     "# Tese are the projects for which data is available\n",
-    "!ls /ppm_data1/YProfiles/"
+    "!ls /ppm_data1/rpod2/YProfiles/"
    ]
   },
   {
@@ -125,12 +125,12 @@
      "text": [
       "Reading attributes from file  YProfile-01-0331.bobaaa\n",
       "Analyzing headers ...\n",
-      "There are 332 YProfile files in the /data1/PPM/YProfiles/O-shell-M25/D1 directory.\n",
+      "There are 332 YProfile files in the /ppm_data1/rpod2/YProfiles/O-shell-M25/D1 directory.\n",
       "Ndump values range from 0 to 331\n",
       "Time values range from 0.0 to 3310.0\n",
       "Reading attributes from file  YProfile-01-0163.bobaaa\n",
       "Analyzing headers ...\n",
-      "There are 164 YProfile files in the /data1/PPM/YProfiles/O-shell-M25/D2 directory.\n",
+      "There are 164 YProfile files in the /ppm_data1/rpod2/YProfiles/O-shell-M25/D2 directory.\n",
       "Ndump values range from 0 to 163\n",
       "Time values range from 0.0 to 1640.0\n"
      ]
