--- a/Examples/4Msun-MS-ZAMS-CBM.ipynb
+++ b/Examples/4Msun-MS-ZAMS-CBM.ipynb
@@ -11,11 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -28,16 +24,14 @@
    "source": [
     "%pylab nbagg\n",
     "from ppmpy import ppm\n",
-    "data_dir='/ppm_data1/rpod2/YProfiles/'"
+    "data_dir='/data/ppm_rpod2/YProfiles/'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -49,11 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -74,11 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -99,11 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -902,11 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1714,11 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2527,11 +2501,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3352,7 +3322,6 @@
    "cell_type": "code",
    "execution_count": 185,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -4278,9 +4247,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "r0=256.e8\n",
@@ -4290,9 +4257,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -4312,9 +4277,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ind0 = max(where(r[1:]<r0/1.e8)[0])\n",
@@ -4324,9 +4287,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5141,9 +5102,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "D = lambda x: D0*exp(-2*(x*1.e8-r0)/(f*Hp0))"
@@ -5153,9 +5112,7 @@
    "cell_type": "code",
    "execution_count": 157,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -5166,9 +5123,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5204,9 +5159,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5228,9 +5181,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from nugridpy import utils as ut\n",
@@ -5240,9 +5191,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6049,9 +5998,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6873,9 +6820,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -6950,9 +6895,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
