cleaning up started

--- a/O-shell_Jones+17/Fig.12/vr_evolution.ipynb
+++ b/O-shell_Jones+17/Fig.12/vr_evolution.ipynb
@@ -11,14 +11,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: nbAgg\n",
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/IPython/core/magics/pylab.py:161: UserWarning: pylab import has clobbered these variables: ['cosh', 'copysign', 'sinh', 'trunc', 'tan', 'sin', 'degrees', 'radians', 'fmod', 'expm1', 'ldexp', 'copy', 'isnan', 'colors', 'frexp', 'ceil', 'cos', 'pi', 'tanh', 'fabs', 'sqrt', 'hypot', 'gamma', 'modf', 'log', 'log10', 'log1p', 'floor', 'exp', 'isinf', 'e']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n",
+      "  \"\\n`%matplotlib` prevents importing * from pylab and numpy\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pylab "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import nugridpy.utils as utils\n",
-    "from ppmpy.ppm import *\n",
+    "from ppmpy import ppm  \n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib nbagg\n",
@@ -40,18 +65,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "data_dir='/data/ppm_rpod2/YProfiles/O-shell-M25/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading attributes from file  YProfile-01-0348.bobaaa\n",
+      "Analyzing headers ...\n",
+      "There are 349 YProfile files in the /data/ppm_rpod2/YProfiles/O-shell-M25/D1 directory.\n",
+      "Ndump values range from 0 to 348\n",
+      "Time values range from 0.0 to 3480.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "prof = ppm.yprofile(data_dir+'D1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prof.cycles[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sparse = 1\n",
     "markevery = 25\n",
-    "\n",
-    "cycles_D1 = range(0, 332, sparse)\n",
-    "prof_D1 = yprofile('/ppm_data1/rpod2/YProfiles/O-shell-M25/D1')\n",
-    "t_D1, vr_max_D1 = get_vr_max_evolution(prof_D1, cycles_D1, 4., 8.)\n",
+    "Ymin=4.; Ymax=8.\n",
+    "cases = ['D1','D2']\n",
+    "for case in cases:\n",
+    "    cycles = range(prof.cycles[0], prof.cycles[-1], sparse)\n",
+    "    prof = yprofile(data_dir+case)\n",
+    "    t, vr_max_D1 = get_vr_max_evolution(prof, cycles, Ymin, Ymax)\n",
     "\n",
     "cycles_D2 = range(0, 164, sparse)\n",
     "prof_D2 = yprofile('/ppm_data1/rpod2/YProfiles/O-shell-M25/D2')\n",
@@ -81,9 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cb = utils.colourblind\n",
@@ -128,9 +203,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
