--- a/O-shell_Jones+17/Fig.12/vr_evolution.ipynb
+++ b/O-shell_Jones+17/Fig.12/vr_evolution.ipynb
@@ -11,39 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using matplotlib backend: nbAgg\n",
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/IPython/core/magics/pylab.py:161: UserWarning: pylab import has clobbered these variables: ['cosh', 'copysign', 'sinh', 'trunc', 'tan', 'sin', 'degrees', 'radians', 'fmod', 'expm1', 'ldexp', 'copy', 'isnan', 'colors', 'frexp', 'ceil', 'cos', 'pi', 'tanh', 'fabs', 'sqrt', 'hypot', 'gamma', 'modf', 'log', 'log10', 'log1p', 'floor', 'exp', 'isinf', 'e']\n",
-      "`%matplotlib` prevents importing * from pylab and numpy\n",
-      "  \"\\n`%matplotlib` prevents importing * from pylab and numpy\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pylab "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nugridpy.utils as utils\n",
-    "from ppmpy import ppm  \n",
+    "from ppmpy.ppm import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib nbagg\n",
@@ -65,70 +38,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "data_dir='/data/ppm_rpod2/YProfiles/O-shell-M25/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading attributes from file  YProfile-01-0348.bobaaa\n",
-      "Analyzing headers ...\n",
-      "There are 349 YProfile files in the /data/ppm_rpod2/YProfiles/O-shell-M25/D1 directory.\n",
-      "Ndump values range from 0 to 348\n",
-      "Time values range from 0.0 to 3480.0\n"
+      "ppm_path not correctly set: /ppm_data1/rpod2/YProfiles/O-shell-M25/D1 is not directory.\n",
+      "error: Directory, /ppm_data1/rpod2/YProfiles/O-shell-M25/D1 not found\n",
+      "Now returning None\n",
+      "That Data name does not appear in this YProfile Directory\n",
+      "Returning none\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'NoneType' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-2bb1abac2fd9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcycles_D1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m332\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msparse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprof_D1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myprofile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/ppm_data1/rpod2/YProfiles/O-shell-M25/D1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mt_D1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvr_max_D1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_vr_max_evolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprof_D1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcycles_D1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8.\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mcycles_D2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m164\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msparse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-00defcbefb67>\u001b[0m in \u001b[0;36mget_vr_max_evolution\u001b[0;34m(prof, cycles, r1, r2)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_vr_max_evolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprof\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcycles\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprof\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Y'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcycles\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresolution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'l'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0midx1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mr1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0midx2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mr2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'NoneType' and 'float'"
      ]
     }
    ],
    "source": [
-    "prof = ppm.yprofile(data_dir+'D1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prof.cycles[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sparse = 1\n",
     "markevery = 25\n",
-    "Ymin=4.; Ymax=8.\n",
-    "cases = ['D1','D2']\n",
-    "for case in cases:\n",
-    "    cycles = range(prof.cycles[0], prof.cycles[-1], sparse)\n",
-    "    prof = yprofile(data_dir+case)\n",
-    "    t, vr_max_D1 = get_vr_max_evolution(prof, cycles, Ymin, Ymax)\n",
+    "\n",
+    "cycles_D1 = range(0, 332, sparse)\n",
+    "prof_D1 = yprofile('/ppm_data1/rpod2/YProfiles/O-shell-M25/D1')\n",
+    "t_D1, vr_max_D1 = get_vr_max_evolution(prof_D1, cycles_D1, 4., 8.)\n",
     "\n",
     "cycles_D2 = range(0, 164, sparse)\n",
     "prof_D2 = yprofile('/ppm_data1/rpod2/YProfiles/O-shell-M25/D2')\n",
