Adding new files for fig 1 improve fig 3

--- a/O-shell_Jones+17/Fig.03/setup_energies.ipynb
+++ b/O-shell_Jones+17/Fig.03/setup_energies.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "240 in profiles.index file ...\n",
+      "Found and load nearest profile for cycle 29350\n",
+      "reading /data/ppm_rpod2/Stellar_models/O-shell-M25/M25Z0.02/LOGS_N2b/log147.data ...\n",
+      " reading ...100% \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.insert(0, '/user/jericho/PyPPM')\n",
@@ -25,22 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "240 in profiles.index file ...\n",
-      "Found and load nearest profile for cycle 29350\n",
-      "reading /data/ppm_rpod2/Stellar_models/O-shell-M25/M25Z0.02/LOGS_N2b/log147.data ...\n",
-      " reading ...100% \n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "application/javascript": [
@@ -829,20 +830,10 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/user/jericho/PyPPM/ppm.py:6249: RuntimeWarning: invalid value encountered in log10\n",
-      "  eps_nuc = np.log10(p.get('eps_nuc'))\n",
-      "/user/jericho/PyPPM/ppm.py:6250: RuntimeWarning: divide by zero encountered in log10\n",
-      "  eps_neu = np.log10(p.get('non_nuc_neu'))\n"
-     ]
     }
    ],
    "source": [
-    "energy_comparison(yprof,mesa_model)"
+    "energy_comparison(yprof,mesa_model,range_conv1 = [1.1593, 1.8553],range_conv2 = [2.0824, 2.50])"
    ]
   },
   {
