Adding Fig 7 to big notebook and version with functions to small

--- a/AGB_low-Z/Fig.07/v_evolution_F4_F5_F13.ipynb
+++ b/AGB_low-Z/Fig.07/v_evolution_F4_F5_F13.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -63,9 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -101,10 +97,10 @@
     }
    ],
    "source": [
-    "import utils\n",
+    "import nugridpy.utils as utils\n",
     "from ppm import *\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as pl\n",
     "%matplotlib nbagg\n",
     "\n",
     "cases = []\n",
@@ -115,17 +111,17 @@
     "res = {}\n",
     "\n",
     "cases.append('F4')\n",
-    "yprof_paths[cases[-1]] = '/rpod2/PPM/YProfiles/AGBTP_M2.0Z1.e-5/F4'\n",
+    "yprof_paths[cases[-1]] = '/data/ppm_rpod2/YProfiles/AGBTP_M2.0Z1.e-5/F4'\n",
     "dump_A[cases[-1]] = 0\n",
     "dump_B[cases[-1]] = 1959\n",
     "\n",
     "cases.append('F5')\n",
-    "yprof_paths[cases[-1]] = '/rpod2/PPM/YProfiles/AGBTP_M2.0Z1.e-5/F5'\n",
+    "yprof_paths[cases[-1]] = '/data/ppm_rpod2/YProfiles/AGBTP_M2.0Z1.e-5/F5'\n",
     "dump_A[cases[-1]] = 0\n",
     "dump_B[cases[-1]] = 1169\n",
     "\n",
     "cases.append('F13')\n",
-    "yprof_paths[cases[-1]] = '/rpod2/PPM/YProfiles/AGBTP_M2.0Z1.e-5/F13'\n",
+    "yprof_paths[cases[-1]] = '/data/ppm_rpod2/YProfiles/AGBTP_M2.0Z1.e-5/F13'\n",
     "dump_A[cases[-1]] = 1\n",
     "dump_B[cases[-1]] = 872\n",
     "\n",
@@ -161,9 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -198,9 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1807,7 +1799,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -1825,5 +1817,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
