Adding to big notebook and files for figs 5/8/9

--- a/AGB_low-Z/Fig.05/avg_rms_velocities_F4.ipynb
+++ b/AGB_low-Z/Fig.05/avg_rms_velocities_F4.ipynb
@@ -89,9 +89,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib nbagg\n",
-    "import utils\n",
+    "import nugridpy.utils as utils\n",
     "\n",
-    "prof = yprofile('/rpod2/PPM/YProfiles/AGBTP_M2.0Z1.e-5/F4')\n",
+    "prof = yprofile('/data/ppm_rpod2/YProfiles/AGBTP_M2.0Z1.e-5/F4')\n",
     "cb = utils.colourblind"
    ]
   },
@@ -142,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "r = prof.get('Y', fname=0, resolution='l')\n",
