--- a/O-shell_Jones+17/plot_MESA_comparison.ipynb
+++ b/O-shell_Jones+17/plot_MESA_comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -835,10 +835,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7fedf4eb0e10>"
+       "<matplotlib.text.Text at 0x7f02b46688d0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
     "      'ti' : 22,\n",
     "      'fe' : 26 }\n",
     "\n",
-    "lines=open('./Fig.01/network.txt','r').readlines()\n",
+    "lines=open('./text_data/network.txt','r').readlines()\n",
     "for line in lines:\n",
     "    zn = line.split()[0]\n",
     "    a1 = int(line.split()[1])\n",
@@ -883,7 +883,7 @@
     "plot(AH-ZH,ZH,'o',color=cb(5))\n",
     "\n",
     "# stable nuclei\n",
-    "lines = open( './Fig.01/stable.dat', 'r' ).readlines()[1:]\n",
+    "lines = open( './text_data/stable.dat', 'r' ).readlines()[1:]\n",
     "z = [ int( l.split()[2] ) for l in lines ]\n",
     "n = [ int( l.split()[3] ) for l in lines ]\n",
     "\n",
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2597,9 +2597,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/test2/test/ppmpy/ppm.py:6881: RuntimeWarning: invalid value encountered in log10\n",
+      "/home/user/test2/test/ppmpy/ppm.py:6887: RuntimeWarning: invalid value encountered in log10\n",
       "  eps_nuc = np.log10(p.get('eps_nuc'))\n",
-      "/home/user/test2/test/ppmpy/ppm.py:6882: RuntimeWarning: divide by zero encountered in log10\n",
+      "/home/user/test2/test/ppmpy/ppm.py:6888: RuntimeWarning: divide by zero encountered in log10\n",
       "  eps_neu = np.log10(p.get('non_nuc_neu'))\n"
      ]
     }
@@ -2613,7 +2613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2624,7 +2624,8 @@
       "Found and load nearest profile for cycle 29350\n",
       "reading /data/ppm_rpod2/Stellar_models/O-shell-M25/M25Z0.02/LOGS_N2b/log147.data ...\n",
       " reading ...100% \n",
-      "\n"
+      "\n",
+      "Closing profile tool ...\n"
      ]
     },
     {
@@ -3426,10 +3427,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7fee28fa69e8>"
+       "<matplotlib.text.Text at 0x7f02dd52ed68>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3440,9 +3441,9 @@
     "m  = p.get('mass')\n",
     "mu = p.get('mu')\n",
     "T  = 10.**p.get('logT')\n",
-    "Pppm = np.load( 'Fig.04/P_ppmsetup.npy' ) * 1.e19 # convert to barye\n",
-    "Mrppm = np.load( 'Fig.04/Mr_ppmsetup.npy' ) * 5.025e-07 # convert to Msun\n",
-    "rhoppm = np.load( 'Fig.04/rho_ppmsetup.npy' ) * 1.e3 # convert to g/cc\n",
+    "Pppm = np.load( 'text_data/P_ppmsetup.npy' ) * 1.e19 # convert to barye\n",
+    "Mrppm = np.load( 'text_data/Mr_ppmsetup.npy' ) * 5.025e-07 # convert to Msun\n",
+    "rhoppm = np.load( 'text_data/rho_ppmsetup.npy' ) * 1.e3 # convert to g/cc\n",
     "\n",
     "f = figure(figsize=(5, 8)) \n",
     "gs = gridspec.GridSpec(2, 1, height_ratios=[1.6, 1]) \n",
@@ -3553,7 +3554,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3571,7 +3572,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/test2/test/ppmpy/ppm.py:6757: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/user/test2/test/ppmpy/ppm.py:6764: RuntimeWarning: invalid value encountered in true_divide\n",
       "  nabla_rho = dlogrho/dlogp\n"
      ]
     },
@@ -4377,6 +4378,13 @@
     "mesa_path = '/data/ppm_rpod2/Stellar_models/O-shell-M25/M25Z0.02/LOGS_N2b'\n",
     "ppm.plot_N2('D1', 0, 132,[3.5,9.,-0.5, 8.],[7.7,8.7,-0.15,1.3], mesa_path, mesa_model_num = 29350)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -4384,6 +4392,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
