Changes to test python2/3 compatability

--- a/AGB_low-Z/plot_Kippenhahn_diagrams.ipynb
+++ b/AGB_low-Z/plot_Kippenhahn_diagrams.ipynb
@@ -11,13 +11,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
-    "%%capture\n",
-    "\n",
     "#for using custom PyPPM for development:\n",
-    "import sys\n",
-    "sys.path.insert(0, '/home/user/test2/test/')\n",
+    "#import sys\n",
+    "#sys.path.insert(0, '/home/user/test2/test/')\n",
     "\n",
     "%pylab nbagg\n",
     "from ppmpy import ppm\n",
@@ -865,7 +871,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/dist-packages/matplotlib/contour.py:1518: UserWarning: Log scale: values of z <= 0 have been masked\n",
+      "/usr/local/lib/python3.5/dist-packages/matplotlib/contour.py:1518: UserWarning: Log scale: values of z <= 0 have been masked\n",
       "  warnings.warn('Log scale: values of z <= 0 have been masked')\n"
      ]
     },
@@ -1716,7 +1722,21 @@
       "\n",
       " finished preparing color map\n",
       "plot versus age\n",
-      "plotting contours\n",
+      "plotting contours\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/matplotlib/contour.py:1518: UserWarning: Log scale: values of z <= 0 have been masked\n",
+      "  warnings.warn('Log scale: values of z <= 0 have been masked')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "plotting patches\n",
       "plotting abund boundaries\n"
      ]
