--- a/AGB_low-Z/plot_radial_profiles.ipynb
+++ b/AGB_low-Z/plot_radial_profiles.ipynb
@@ -9,16 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
-    "%%capture\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
     "#for using custom PyPPM for development:\n",
     "import sys\n",
-    "sys.path.insert(0, '/home/user/test2/test/')\n",
+    "sys.path.insert(0, '/home/user/PyPPM/')\n",
     "\n",
     "%pylab nbagg\n",
     "from ppmpy import ppm\n",
@@ -36,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +70,7 @@
        "['F6', 'F7', 'F11', 'F4', 'F5']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -881,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1681,31 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  3.39834000e+01,   3.39502000e+01,   3.39170000e+01, ...,\n",
-       "         8.30078000e-02,   4.98047000e-02,   1.66016000e-02])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F5 = ppm.yprofile('F5')\n",
-    "F13 = ppm.yprofile('F13')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2511,15 +2492,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fig 11"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3324,13 +3298,12 @@
     }
    ],
    "source": [
-    "#F4_prof = yprofile('/data/ppm_rpod2/YProfiles/AGBTP_M2.0Z1.e-5/F4')\n",
-    "F4_prof.Aprof_time(np.array([807., 1399., 2119., 2351., 2695.]),range(0,30,1),lims =[10., 30.,0., 2.5e-2],silent = True)"
+    "F4.Aprof_time(np.array([807., 1399., 2119., 2351., 2695.]),range(0,30,1),lims =[10., 30.,0., 2.5e-2],silent = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3347,7 +3320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3357,17 +3330,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesa_logs_path = '/data/ppm_rpod2/Stellar_models/AGBTP_M2.0Z1.e-5/M2.00Z1.e-5/LOGS'\n",
+    "data_dir = '/data/ppm_rpod2/'\n",
+    "mesa_logs_path = 'Stellar_models/AGBTP_M2.0Z1.e-5/M2.00Z1.e-5/LOGS'\n",
     "mesa_model_num = 24150"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3383,7 +3357,7 @@
     }
    ],
    "source": [
-    "mesa_prof = ms.mesa_profile(mesa_logs_path, mesa_model_num)\n",
+    "mesa_prof = ms.mesa_profile(data_dir + mesa_logs_path, mesa_model_num)\n",
     "# convert the mesa variables to cgs units\n",
     "mesa_r = ast.rsun_cm*mesa_prof.get('radius')\n",
     "mesa_p = 10**mesa_prof.get('logP')\n",
@@ -3441,7 +3415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4292,21 +4266,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
