--- a/AGB_low-Z/plot_radial_buckets.ipynb
+++ b/AGB_low-Z/plot_radial_buckets.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,21 +23,17 @@
    "source": [
     "#for using custom PyPPM for development:\n",
     "import sys\n",
-    "sys.path.insert(0, '/home/user/test2/test/')\n",
+    "sys.path.insert(0, '/home/user/PyPPM/')\n",
     "\n",
     "%pylab nbagg\n",
     "import ppmpy.ppm as ppm\n",
-    "\n",
-    "sys.path.insert(0,'/home/user/')\n",
-    "import rprofile3 as rprofile\n",
-    "import os\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "import ppmpy.rprofile as rprofile\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,22 +69,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data/ppm_rpod2/RProfiles/AGBTP_M2.0Z1.e-5/F4\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "29.009326934814453"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_path = os.path.join(data_dir,project,'F4')\n",
+    "print(data_path)\n",
     "rp_set = rprofile.rprofile_set(data_path)\n",
     "rp = rp_set.get_dump(100)\n",
     "rp.get('radtop')"
@@ -116,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2521,16 +2525,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/test2/test/ppmpy/ppm.py:5965: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/user/test2/test/ppmpy/ppm.py:5979: RuntimeWarning: invalid value encountered in true_divide\n",
       "  A = p/rho**gamma\n",
-      "/home/user/test2/test/ppmpy/ppm.py:5974: RuntimeWarning: invalid value encountered in greater\n",
+      "/home/user/test2/test/ppmpy/ppm.py:5988: RuntimeWarning: invalid value encountered in greater\n",
       "  idx_top = np.argmax(rel_diff > threshold)\n"
      ]
     },
@@ -3327,7 +3331,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/dist-packages/matplotlib/figure.py:1743: UserWarning: This figure includes Axes that are not compatible with tight_layout, so its results might be incorrect.\n",
+      "/usr/local/lib/python3.5/dist-packages/matplotlib/figure.py:1743: UserWarning: This figure includes Axes that are not compatible with tight_layout, so its results might be incorrect.\n",
       "  warnings.warn(\"This figure includes Axes that are not \"\n"
      ]
     }
@@ -3347,21 +3351,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
