--- a/O-shell_Jones+17/plot_MESA_comparison.ipynb
+++ b/O-shell_Jones+17/plot_MESA_comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
    "source": [
     "#for using custom PyPPM for development:\n",
     "import sys\n",
-    "sys.path.insert(0, '/home/user/test2/test/')\n",
+    "sys.path.insert(0, '/home/user/PyPPM/')\n",
     "\n",
     "%pylab nbagg\n",
     "from ppmpy import ppm\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -835,10 +835,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7f02b46688d0>"
+       "<matplotlib.text.Text at 0x7f1c68220b90>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
     "ZH=np.array(ZH)\n",
     "AH=np.array(AH)\n",
     "\n",
-    "figure()\n",
+    "figure(78)\n",
     "plot(AH-ZH,ZH,'o',color=cb(5))\n",
     "\n",
     "# stable nuclei\n",
@@ -1758,7 +1758,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.5/dist-packages/matplotlib/contour.py:1518: UserWarning: Log scale: values of z <= 0 have been masked\n",
+      "/usr/local/lib/python2.7/dist-packages/matplotlib/contour.py:1518: UserWarning: Log scale: values of z <= 0 have been masked\n",
       "  warnings.warn('Log scale: values of z <= 0 have been masked')\n"
      ]
     },
@@ -2597,9 +2597,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/test2/test/ppmpy/ppm.py:6887: RuntimeWarning: invalid value encountered in log10\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:6889: RuntimeWarning: invalid value encountered in log10\n",
       "  eps_nuc = np.log10(p.get('eps_nuc'))\n",
-      "/home/user/test2/test/ppmpy/ppm.py:6888: RuntimeWarning: divide by zero encountered in log10\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:6890: RuntimeWarning: divide by zero encountered in log10\n",
       "  eps_neu = np.log10(p.get('non_nuc_neu'))\n"
      ]
     }
@@ -2613,7 +2613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2624,8 +2624,7 @@
       "Found and load nearest profile for cycle 29350\n",
       "reading /data/ppm_rpod2/Stellar_models/O-shell-M25/M25Z0.02/LOGS_N2b/log147.data ...\n",
       " reading ...100% \n",
-      "\n",
-      "Closing profile tool ...\n"
+      "\n"
      ]
     },
     {
@@ -3421,16 +3420,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:61: RuntimeWarning: invalid value encountered in log10\n"
+      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:61: RuntimeWarning: invalid value encountered in log10\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7f02dd52ed68>"
+       "<matplotlib.text.Text at 0x7f1c685cf3d0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3552,7 +3551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -3572,7 +3571,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/test2/test/ppmpy/ppm.py:6764: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:6766: RuntimeWarning: invalid value encountered in true_divide\n",
       "  nabla_rho = dlogrho/dlogp\n"
      ]
     },
@@ -4389,21 +4388,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
