--- a/O-shell_Jones+17/plot_diffusion_analysis.ipynb
+++ b/O-shell_Jones+17/plot_diffusion_analysis.ipynb
@@ -9,15 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     }
@@ -27,7 +25,7 @@
     "%autoreload 2\n",
     "#for using custom PyPPM for development:\n",
     "import sys\n",
-    "sys.path.insert(0, '/home/user/test2/test/')\n",
+    "sys.path.insert(0, '/home/user/PyPPM/')\n",
     "\n",
     "%pylab nbagg\n",
     "from ppmpy import ppm\n",
@@ -41,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -839,8 +837,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/test2/test/ppmpy/ppm.py:3186: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  pl.plot(x[indx1:indx2]/1.e8,m*x[indx1:indx2]/1.e8+b,\n"
+      "/home/user/PyPPM/ppmpy/ppm.py:3192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  Hp = - P[1:] * np.diff(rr) / np.diff(P)\n"
      ]
     },
     {
@@ -849,7 +847,7 @@
        "(7, 15)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,14 +862,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/test2/test/ppmpy/ppm.py:2833: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:2840: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  Hp = - P[1:] * np.diff(r) / np.diff(P)\n"
      ]
     },
@@ -889,9 +887,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/test2/test/ppmpy/ppm.py:7331: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:7345: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  Hp = - P[1:] * np.diff(r) * 1.e8 / np.diff(P)\n",
-      "/home/user/test2/test/ppmpy/ppm.py:7333: RuntimeWarning: invalid value encountered in multiply\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:7347: RuntimeWarning: invalid value encountered in multiply\n",
       "  Dav = (1./3.) * vav * alpha * Hp\n"
      ]
     },
@@ -907,7 +905,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/test2/test/ppmpy/ppm.py:7346: RuntimeWarning: invalid value encountered in multiply\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:7360: RuntimeWarning: invalid value encountered in multiply\n",
       "  Dav2 = (1./3.) * vav * np.minimum(alpha * Hp,rtop*1.e8-r*1.e8)\n"
      ]
     },
@@ -1711,17 +1709,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/test2/test/ppmpy/ppm.py:7349: RuntimeWarning: divide by zero encountered in log10\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:7363: RuntimeWarning: divide by zero encountered in log10\n",
       "  pl.plot(rrc,np.log10(DDc),color = cb(yy),markevery=markevery,\\\n",
-      "/home/user/test2/test/ppmpy/ppm.py:7349: RuntimeWarning: invalid value encountered in log10\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:7363: RuntimeWarning: invalid value encountered in log10\n",
       "  pl.plot(rrc,np.log10(DDc),color = cb(yy),markevery=markevery,\\\n",
-      "/home/user/test2/test/ppmpy/ppm.py:7356: RuntimeWarning: divide by zero encountered in log10\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:7370: RuntimeWarning: divide by zero encountered in log10\n",
       "  pl.plot(r,np.log10(Dav),color = cb(yy),marker = ls(yy)[1], markevery=markevery,\\\n",
-      "/home/user/test2/test/ppmpy/ppm.py:7360: RuntimeWarning: divide by zero encountered in log10\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:7374: RuntimeWarning: divide by zero encountered in log10\n",
       "  pl.plot(r,np.log10(Dav2),color = cb(yy),marker = ls(yy)[1],markevery=markevery,linewidth=2.5,alpha=0.5,\\\n",
-      "/home/user/test2/test/ppmpy/ppm.py:7360: RuntimeWarning: invalid value encountered in log10\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:7374: RuntimeWarning: invalid value encountered in log10\n",
       "  pl.plot(r,np.log10(Dav2),color = cb(yy),marker = ls(yy)[1],markevery=markevery,linewidth=2.5,alpha=0.5,\\\n",
-      "/home/user/test2/test/ppmpy/ppm.py:7363: RuntimeWarning: invalid value encountered in log10\n",
+      "/home/user/PyPPM/ppmpy/ppm.py:7377: RuntimeWarning: invalid value encountered in log10\n",
       "  pl.plot(rm,np.log10(Davmes),color = cb(yy),marker = ls(yy)[1],markevery=markevery,linewidth=2.5,alpha=0.5,\\\n"
      ]
     },
@@ -1731,7 +1729,7 @@
        "(11, 16)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,6 +1740,13 @@
     "pl.xlim(3,9)\n",
     "pl.ylim(11,16)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
