remove python path import

--- a/Demos/MomsData_Demo.ipynb
+++ b/Demos/MomsData_Demo.ipynb
@@ -59,7 +59,7 @@
     "# request) in the https://github.com/PPMstar/PyPPM repo you may want use that \n",
     "# updated version\n",
     "#sys.path.insert(0,'/user/david/PyPPM/')\n",
-    "sys.path.insert(0,'/user/PyPPM/')\n",
+    "#sys.path.insert(0,'/user/PyPPM/')\n",
     "from ppmpy import ppm\n",
     "\n",
     "cb = utils.linestylecb # colours"
