--- a/Demos/ppmpy_demo.ipynb
+++ b/Demos/ppmpy_demo.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import sys, os\n",
-    "sys.path.insert(0,'/user/PyPPM/')\n",
+    "#sys.path.insert(0,'/user/PyPPM/')\n",
     "from ppmpy import ppm"
    ]
   },
