--- a/Demos/rprof_demo.ipynb
+++ b/Demos/rprof_demo.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sys, os\n",
-    "sys.path.append('/user/PyPPM')\n",
+    "#sys.path.append('/user/PyPPM')\n",
     "from ppmpy import ppm\n",
     "from matplotlib import pyplot as plt"
    ]
