--- a/Demos/ppmpy-yprofile-demo.ipynb
+++ b/Demos/ppmpy-yprofile-demo.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0,'/user/scratch14.4/PyPPM')\n",
+    "#sys.path.insert(0,'/user/scratch14.4/PyPPM')\n",
     "import os\n",
     "from ppmpy import ppm"
    ]
@@ -448,14 +448,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
